--- a/assets/page-two.html
+++ b/assets/page-two.html
@@ -179,7 +179,7 @@
       </div>
 
       <div class="image-box">
-        <img src="/assets/image/pink-bunny3.png" alt="Bunny" class="bunny3" />
+        <img src="./image/pink-bunny3.png" alt="Bunny" class="bunny3" />
       </div>
     </div>
 
