--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="text-box">
         <h1>Memory Hunt</h1>
         <p>Memorize the numbers,<br />then select them in order!</p>
-        <a class="refrance-btn" href="/assets/page-two.html">Let's Play!</a>
+        <a class="refrance-btn" href="./assets/page-two.html">Let's Play!</a>
       </div>
       <img src="./assets/image/pink-bunny2.png" alt="Bunny" class="bunny1" />
     </div>
